update javadoc, sjavac with preliminary support for long form options; update tests