@@ -67,6 +67,13 @@ public enum ToolOption {
         }
     },
 
+    CLASS_PATH("--class-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(Option.CLASSPATH, arg);
+        }
+    },
+
     EXTDIRS("-extdirs", true) {
         @Override
         public void process(Helper helper, String arg) {
@@ -75,6 +82,13 @@ public enum ToolOption {
     },
 
     SOURCEPATH("-sourcepath", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(Option.SOURCEPATH, arg);
+        }
+    },
+
+    SOURCE_PATH("--source-path", true) {
         @Override
         public void process(Helper helper, String arg) {
             helper.setFileManagerOpt(Option.SOURCEPATH, arg);
@@ -95,7 +109,21 @@ public enum ToolOption {
         }
     },
 
+    MODULE_SOURCE_PATH("--module-source-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(Option.MODULESOURCEPATH, arg);
+        }
+    },
+
     UPGRADEMODULEPATH("-upgrademodulepath", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(Option.UPGRADEMODULEPATH, arg);
+        }
+    },
+
+    UPGRADE_MODULE_PATH("--upgrade-module-path", true) {
         @Override
         public void process(Helper helper, String arg) {
             helper.setFileManagerOpt(Option.UPGRADEMODULEPATH, arg);
@@ -116,6 +144,20 @@ public enum ToolOption {
         }
     },
 
+    MODULE_PATH("--module-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(Option.MODULEPATH, arg);
+        }
+    },
+
+    P("-p", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(Option.MODULEPATH, arg);
+        }
+    },
+
     ADDMODS("-addmods", true) {
         @Override
         public void process(Helper helper, String arg) {
@@ -123,7 +165,21 @@ public enum ToolOption {
         }
     },
 
+    ADD_MODULES("--add-modules", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            Option.ADDMODS.process(helper.getOptionHelper(), opt, arg);
+        }
+    },
+
     LIMITMODS("-limitmods", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            Option.LIMITMODS.process(helper.getOptionHelper(), opt, arg);
+        }
+    },
+
+    LIMIT_MODULES("--limit-modules", true) {
         @Override
         public void process(Helper helper, String arg) {
             Option.LIMITMODS.process(helper.getOptionHelper(), opt, arg);
@@ -173,7 +229,21 @@ public enum ToolOption {
         }
     },
 
-    XADDEXPORTS("-XaddExports:", false) {
+    ADD_READS("--add-reads", false) {
+        @Override
+        public void process(Helper helper, String arg) {
+            Option.XADDREADS.process(helper.getOptionHelper(), arg);
+        }
+    },
+
+    ADDEXPORTS("-XaddExports:", false) {
+        @Override
+        public void process(Helper helper, String arg) {
+            Option.XADDEXPORTS.process(helper.getOptionHelper(), arg);
+        }
+    },
+
+    ADD_EXPORTS("--add-exports", false) {
         @Override
         public void process(Helper helper, String arg) {
             Option.XADDEXPORTS.process(helper.getOptionHelper(), arg);
@@ -191,6 +261,13 @@ public enum ToolOption {
         @Override
         public void process(Helper helper, String arg) {
             Option.XMODULE.process(helper.getOptionHelper(), arg);
+        }
+    },
+
+    PATCH_MODULE("--patch-module", false) {
+        @Override
+        public void process(Helper helper, String arg) {
+            Option.XPATCH.process(helper.getOptionHelper(), arg);
         }
     },
 
