@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @summary Test the -XaddReads option
+ * @summary Test the --add-reads option
  * @library /tools/lib
  * @modules jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.main
